fix: disqus dark mode

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -12,6 +12,10 @@ $defaultTagColors: #fff, #fff, #fff, #fff, #fff;
     --pre-text-color: #f8f8f2;
     --pre-background-color: #272822;
     @import "partials/highlight/dark.scss";
+
+    iframe {
+        color-scheme: dark;
+    }
 }
 
 /*
